# cptrad

./: .gitignore  README.md
backend/: Cargo.toml  todo
backend/bpmn/: copy_trader.bpmn  create_trade.bpmn
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/graphql/: queries.js
frontend/src/views/: Dashboard.vue  MyTrades.vue  Traders.vue
