[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
async-graphql = { version = "7.1.0", features = ["chrono"] }
async-graphql-actix-web = "7.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snurr = "0.13.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }

